--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="favicon.ico">
+    <link href='./favicon.ico' rel="icon" Atype="image/x-icon" />
     <script src="https://kit.fontawesome.com/15c6664608.js"></script>
     <title>Diamond Chat</title>
   </head>
