--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href='./favicon.ico' rel="icon" Atype="image/x-icon" />
-    <script src="https://kit.fontawesome.com/15c6664608.js"></script>
+    <script src="https://kit.fontawesome.com/23bbf1e4f9.js" crossorigin="anonymous"></script>
     <title>Diamond Chat</title>
   </head>
   <body>
